--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,5 +2,5 @@
 @plugin "daisyui";
 
 @plugin "daisyui" {
-    themes: light --default, dark --prefersdark, dim;
-  }
+  themes: light --default, dark --prefersdark, dim, corporate, bumblebee, cupcake, emerald, synthwave, retro, cyberpunk, night;
+}
